# DynSeg

./: README.md  evaluate.py  execute.ipynb  main.py  pyproject.toml  train.py
configs/: basic.toml
data/: test.py
models/: backbone.py  clip_unet.py  deep_supervision.py  hypernetwork_modules.py  kernel_hypernet.py  modulated_unet.py  rand_lora.py  separable_unet.py  text_backbone.py
models/unet/: __init__.py  unet_parts.py
src/: unet_modulator.py  visualization.py
utils/: __init__.py  dataset.py  dice_score.py  utils.py
